# vc2hqencode

./: .gitignore  AUTHORS  CONTRIBUTING  Makefile.am  README  configure.ac  duplicate-transform  vc2hqencode-uninstalled.pc.in  vc2hqencode.pc.in
redist/: COPYING  Makefile.am  threadbarrier.hpp
testprogs/: COPYING  Makefile.am  movingzoneplate.cpp  program_options_lite.cpp  program_options_lite.h  vc2encode.cpp
testprogs/tclap/: Arg.h  ArgException.h  ArgTraits.h  CmdLine.h  CmdLineInterface.h  CmdLineOutput.h  Constraint.h  DocBookOutput.h  HelpVisitor.h  IgnoreRestVisitor.h  MultiArg.h  MultiSwitchArg.h  OptionalUnlabeledTracker.h  StandardTraits.h  StdOutput.h  SwitchArg.h  UnlabeledMultiArg.h  UnlabeledValueArg.h  ValueArg.h  ValuesConstraint.h  VersionVisitor.h  Visitor.h  XorHandler.h  ZshCompletionOutput.h
testsuite/: Makefile.am  test_transforms.cpp  tests.cpp
vc2hqencode/: Makefile.am  ThreadPool.hpp  VC2Encoder.cpp  VC2Encoder.hpp  VideoFormat.hpp  datastructures.hpp  debug.hpp  encode.cpp  encode.hpp  encode_slice_component_optimised.hpp  intdivide.hpp  internal.h  logger.cpp  logger.hpp  lut.hpp  quantise.cpp  quantise.hpp  quantiserselection.hpp  serialise.hpp  stats.cpp  stats.hpp  stream.cpp  stream.hpp  thread_group.hpp  transform.hpp  vc2hqencode.cpp  vc2hqencode.h
vc2transform_avx/: Makefile.am  transform_avx.cpp  transform_avx.hpp  transform_kernels.hpp
vc2transform_avx2/: Makefile.am  haar_transform.hpp  transform_avx2.cpp  transform_avx2.hpp  transform_kernels.hpp
vc2transform_c/: Makefile.am  deslauriers_dubuc_13_7_transform.hpp  deslauriers_dubuc_9_7_transform.hpp  fidelity_transform.hpp  haar_transform.hpp  legall_transform.hpp  transform_c.cpp  transform_c.hpp  transform_kernels.hpp
vc2transform_sse4_2/: Makefile.am  haar_transform.hpp  legall_transform.hpp  transform_kernels.hpp  transform_sse4_2.cpp  transform_sse4_2.hpp
