noinst_PROGRAMS = vc2encode $(linux_only_progs)

AM_CFLAGS = $(VC2HQENCODE_CFLAGS)

AM_CXXFLAGS = $(VC2HQENCODE_CFLAGS)

AM_LDFLAGS = $(VC2HQENCODE_LDFLAGS)

LDADD = $(VC2HQENCODE_LIBS)

vc2encode_SOURCES = vc2encode.cpp \
	movingzoneplate.cpp

noinst_HEADERS = \
        tclap/ArgException.h  \
        tclap/CmdLine.h \
        tclap/Constraint.h \
        tclap/IgnoreRestVisitor.h \
        tclap/OptionalUnlabeledTracker.h \
        tclap/SwitchArg.h \
        tclap/ValueArg.h \
        tclap/Visitor.h \
        tclap/Arg.h \
        tclap/CmdLineInterface.h \
        tclap/DocBookOutput.h \
        tclap/MultiArg.h \
        tclap/StandardTraits.h \
        tclap/UnlabeledMultiArg.h \
        tclap/ValuesConstraint.h \
        tclap/XorHandler.h \
        tclap/ArgTraits.h \
        tclap/CmdLineOutput.h \
        tclap/HelpVisitor.h \
        tclap/MultiSwitchArg.h \
        tclap/StdOutput.h \
        tclap/UnlabeledValueArg.h \
        tclap/VersionVisitor.h \
        tclap/ZshCompletionOutput.h
